@@ -1,5 +1,14 @@
 2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* sysdeps/powerpc/dfpu/floord128.c: New file: floord128 optimized
+	implementation for PowerPC.
+	* sysdeps/powerpc/dfpu/floord32.c: New file: floord64 optimized
+	implementation for PowerPC.
+	* sysdeps/powerpc/dfpu/floord64.c: New file: floord32 optimized
+	implementation for PowerPC.
+
+2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* sysdeps/powerpc/dfpu/truncd128.c: New file: truncd128 optimized
 	implementation for PowerPC.
 	* sysdeps/powerpc/dfpu/truncd32.c: New file: truncd64 optimized
